Stops next button jumping

--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,6 @@ input[type='radio']:checked + label{
 .table-row {
         border-top: 1px solid black;
 }
+#selectionArea {
+        min-height: 6.4em;
+}
